# atproto-stats

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_NOTES.md  Dockerfile  LICENSE-APACHE  Makefile  PROVENANCE.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: cron_daily.sh
src/bsky_noise/: __init__.py  atproto.py  candidates.py  classify.py  cli.py  config.py  db.py  label_audit.py  locking.py  reciprocity.py  report.py  sync.py
tests/: test_candidates.py  test_classify.py  test_db.py  test_label_audit.py  test_reciprocity.py  test_report.py
