[project]
name = "bsky-noise"
version = "0.1.0"
description = "Local-only ATProto/Bsky follow noise analyzer"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "Your Name"}]

dependencies = [
  "httpx>=0.27",
  "platformdirs>=4.2",
  "rich>=13.7",
]

[project.scripts]
bsky_noise = "bsky_noise.cli:main"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
